bin/testsuite/tests/compiler/src/errors/compiler3324.swg
//#global skip
//#global testerror
#test
{
    let a = #run
    {
        var ret = 0's32
        for 10 do
            ret += 66
        return ret
    }

    @assert(a == 660)
}
